# capybanse_service

./: .gitignore  README.md  capybanse.env  docker-compose.yml  qdrant_config.yaml
.github/workflows/: on_common_change.yml
capybanse_common/: Dockerfile  pyproject.toml
capybanse_common/common/clients/: clickhouse_client.py  prepared_sql.py  vectordb_client.py
capybanse_common/common/models/: __init__.py
capybanse_common/common/utils/: serde_helpers.py
common/: pyproject.toml
common/clients/: __init__.py  clickhouse_client.py  posgres_client.py  prepared_sql.py  vectordb_client.py
common/models/: __init__.py
common/utils/: __init__.py
event_handler/: Dockerfile  config.py  main.py  pyproject.toml
models/: __init__.py
parsers/: Dockerfile  config.py  main.py  pyproject.toml  utils.py
parsers/common_parser/: __init__.py
parsers/kudago_parser/: __init__.py
parsers/parsers/: config.py
parsers/parsers/common_parser/: __init__.py
parsers/parsers/kudago_parser/: __init__.py
parsers/parsers/storage/: __init__.py
parsers/parsers/timepad_parser/: __init__.py
parsers/storage/: __init__.py
parsers/timepad_parser/: __init__.py
recommendation_service/: Dockerfile  config.py  main.py  pyproject.toml
recommendation_service/recsys_service/: __init__.py  rec_utils.py
recommendation_service/rs/: __init__.py  rec_utils.py
