[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capybanse_common"
version = "2024.0.1"
description = "common models and utilities"
authors = [
    "Radmir <radmirka745@gmail.com>",
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    'psycopg[binary, pool]~=3.1',
    'fastembed~=0.2',
    'pydantic~=2.7',
    'qdrant-client~=1.9',
    'clickhouse-connect~=0.7',
]
