[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "events_handler"
version = "2024.0.1"
description = "events handler"
authors = [
    "Radmir <radmirka745@gmail.com>",
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    'requests ~= 2.3',
    'pika ~= 1.3',
    'psycopg~=3.1',
    'psycopg-binary~=3.1',
]