[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "events_handler"
version = "2024.0.1"
description = "events handler"
authors = [
    "Radmir <radmirka745@gmail.com>",
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    'psycopg[binary, pool]~=3.1',
#    'psycopg-binary~=3.1',
]
