[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "events_handler"
version = "2024.0.1"
description = "events handler"
authors = [
    { name="Radmir", email="radmirka745@gmail.com"},
]
license = { "text" = "AGPL-3.0" }
dependencies = [
    'aio-pika ~= 9.4',
]
