[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capybanse_parser"
version = "2024.0.1"
description = "events parsing from different sources"
authors = [
    "Radmir <radmirka745@gmail.com>",
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    'aio-pika ~= 9.4',
    'httpx ~= 0.27',
    'pydantic~=2.7',
    'selectolax~=0.3',
    'psycopg~=3.1',
    'psycopg-binary~=3.1',
]